--- a/styles.css
+++ b/styles.css
@@ -61,7 +61,7 @@
     }
 }
 
-@media screen and (max-width: 400px) and (min-width: 300px) {
+@media screen and (max-width: 300px) {
     .navbar-link{
         font-size: 0.6rem;
     }
